--- a/tmpl/scss/core/_footer.scss
+++ b/tmpl/scss/core/_footer.scss
@@ -60,7 +60,7 @@ Footer
     margin-bottom: 0.75em;
 }
 .list-foot-social a {
-    background-position: 0 0.25em;
+    background-position: 0 0.2em;
     display: block;
     min-height: 20px;
 }
